--- a/stories/es/0003_ropa-de-escuela.html
+++ b/stories/es/0003_ropa-de-escuela.html
@@ -49,35 +49,35 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Español</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
 
-<p>El vestido es largo.</p>
+<p>Este vestido es largo.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
 
-<p>La chompa es grande.</p>
+<p>Esta chompa es grande.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
 
-<p>El bolso es grande.</p>
+<p>Este bolso es grande.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
 
-<p>El cinturón es…</p>
+<p>Este cinturón es…</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
 
-<p>El sombrero es pequeño.</p>
+<p>Este sombrero es pequeño.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
