--- a/stories/es/0003_ropa-de-escuela_slides.html
+++ b/stories/es/0003_ropa-de-escuela_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
-<p>El vestido es largo.</p>
+<p>Este vestido es largo.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
-<p>La chompa es grande.</p>
+<p>Esta chompa es grande.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
-<p>El bolso es grande.</p>
+<p>Este bolso es grande.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>El cinturón es...</p>
+<p>Este cinturón es...</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
-<p>El sombrero es pequeño.</p>
+<p>Este sombrero es pequeño.</p>
 <center>
 <strong>5</strong>
 </center>
