--- a/stories/es/0052_simbegwire.html
+++ b/stories/es/0052_simbegwire.html
@@ -147,7 +147,7 @@ Rukia Nantale<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
 
-<p>Su padre la visitaba todos los días. Con el paso del tiempo, él llevó a Anita. Ella tomó la mando de Simbegwire. “Lo siento mucho pequeñita, me equivoque,” ella le dijo. “¿Me darías otra oportunidad?” Simbegwire volteó a mirar a su padre, quien lucía preocupado. Entonces, ella se acercó a Anita lentamente y la abrazó.</p>
+<p>Su padre la visitaba todos los días. Con el paso del tiempo, él llevó a Anita. Ella tomó la mando de Simbegwire. “Lo siento mucho pequeñita, me equivoqué,” ella le dijo. “¿Me darías otra oportunidad?” Simbegwire volteó a mirar a su padre, quien lucía preocupado. Entonces, ella se acercó a Anita lentamente y la abrazó.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
