--- a/stories/es/0066_nozibele-y-sus-tres-cabellos.html
+++ b/stories/es/0066_nozibele-y-sus-tres-cabellos.html
@@ -63,7 +63,7 @@ Tessa Welch<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
 
-<p>Repentinamente, se dieron cuenta que era tarde y corrieron hacia la villa.</p>
+<p>Repentinamente, se dieron cuenta que era tarde. Corrieron hacia la villa.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
