--- a/stories/es/0156_el-cocodrilo-hambriento_slides.html
+++ b/stories/es/0156_el-cocodrilo-hambriento_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
-<p>Había una vez, un cocodrilo que tenía mucha hambre.</p>
+<p>Había una vez un cocodrilo que tenía mucha hambre.</p>
 <center>
 <strong>1</strong>
 </center>
