--- a/stories/es/0262_magozwe.html
+++ b/stories/es/0262_magozwe.html
@@ -91,35 +91,35 @@ Lesley Koyi<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>Hacía frío y Magozwe estaba mendigando en la calle. Un hombre se le acercó. “Hola, soy Tomás. Trabajo cerca de acá, en un lugar donde podemos darte comida,” dijo el hombre. Apuntó hacia una casa amarilla con techo azul. “Ojalá vayas pronto a buscar comida” le dijo. Magozwe miró al hombre, y después miró la casa. “Quizá”, dijo, y se fue.</p>
+<p>Hacía frío y Magozwe estaba mendigando en la calle. Un hombre se le acercó. “Hola, soy Thomas. Trabajo cerca de acá, en un lugar donde podemos darte comida,” dijo el hombre. Apuntó hacia una casa amarilla con techo azul. “Ojalá vayas pronto a buscar comida” le dijo. Magozwe miró al hombre, y después miró la casa. “Quizá”, dijo, y se fue.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
 
-<p>Con el paso de los meses, los jóvenes mendigos se acostumbraron a la presencia de Tomás. Él disfrutaba hablar con la gente, especialmente con los mendigos. Tomás escuchaba las historias de sus vidas. Era serio y paciente, nunca maleducado ni irrespetuoso. Algunos de los chicos empezaron a ir a la casa amarilla y azul a buscar comida al mediodía.</p>
+<p>Con el paso de los meses, los jóvenes mendigos se acostumbraron a la presencia de Thomas. Él disfrutaba hablar con la gente, especialmente con los mendigos. Thomas escuchaba las historias de sus vidas. Era serio y paciente, nunca maleducado ni irrespetuoso. Algunos de los chicos empezaron a ir a la casa amarilla y azul a buscar comida al mediodía.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
 
-<p>Magozwe estaba sentado en la calle mirando su libro cuando Tomás vino y se sentó a su lado. “¿De qué trata la historia?” preguntó Tomás. “Trata sobre un chico que se convierte en piloto,” respondió Magozwe. “¿Cómo se llama el niño?” preguntó Tomás. “No sé porque no sé leer,” dijo Magozwe en voz baja.</p>
+<p>Magozwe estaba sentado en la calle mirando su libro cuando Thomas vino y se sentó a su lado. “¿De qué trata la historia?” preguntó Thomas. “Trata sobre un chico que se convierte en piloto,” respondió Magozwe. “¿Cómo se llama el niño?” preguntó Thomas. “No sé porque no sé leer,” dijo Magozwe en voz baja.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
 
-<p>Cuando volvieron a reunirse, Magozwe le relató la historia de su vida a Tomás. Le habló de su tío y de por qué huyó de esa casa. Tomás no hablaba mucho, y no le decía a Magozwe qué hacer, pero siempre le escuchaba con atención. Algunas veces conversaban mientras comían en la casa del techo azul.</p>
+<p>Cuando volvieron a reunirse, Magozwe le relató la historia de su vida a Thomas. Le habló de su tío y de por qué huyó de esa casa. Thomas no hablaba mucho, y no le decía a Magozwe qué hacer, pero siempre le escuchaba con atención. Algunas veces conversaban mientras comían en la casa del techo azul.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
 
-<p>Cuando Magozwe cumplió alrededor de diez años, Tomás le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Tomás leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, “creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?” Tomás le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
+<p>Cuando Magozwe cumplió alrededor de diez años, Thomas le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Thomas leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, “creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?” Thomas le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
@@ -133,7 +133,7 @@ Lesley Koyi<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
 
-<p>Magozwe le habló de sus miedos a Tomás. Con el paso del tiempo, Tomás pudo asegurarle al chico que su vida iba a ser mejor en ese nuevo lugar.</p>
+<p>Magozwe le habló de sus miedos a Thomas. Con el paso del tiempo, Thomas pudo asegurarle al chico que su vida iba a ser mejor en ese nuevo lugar.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Lesley Koyi<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
 
-<p>Magozwe estaba sentado en el patio de la casa del techo verde, leyendo un libro de cuentos de su escuela. Tomás se le acercó y se sentó junto a él. “¿De qué trata la historia?” preguntó Tomás. “Trata sobre un chico que se convierte en profesor,” respondió Magozwe. “¿Cómo se llama el chico?” preguntó Tomás. “Su nombre es Magozwe,” dijo Magozwe sonriendo.</p>
+<p>Magozwe estaba sentado en el patio de la casa del techo verde, leyendo un libro de cuentos de su escuela. Thomas se le acercó y se sentó junto a él. “¿De qué trata la historia?” preguntó Thomas. “Trata sobre un chico que se convierte en profesor,” respondió Magozwe. “¿Cómo se llama el chico?” preguntó Thomas. “Su nombre es Magozwe,” dijo Magozwe sonriendo.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
