--- a/stories/es/0262_magozwe_slides.html
+++ b/stories/es/0262_magozwe_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
-<p>Hacía frío y Magozwe estaba mendigando en la calle. Un hombre se le acercó. &quot;Hola, soy Tomás. Trabajo cerca de acá, en un lugar donde podemos darte comida,&quot; dijo el hombre. Apuntó hacia una casa amarilla con techo azul. &quot;Ojalá vayas pronto a buscar comida&quot; le dijo. Magozwe miró al hombre, y después miró la casa. &quot;Quizá&quot;, dijo, y se fue.</p>
+<p>Hacía frío y Magozwe estaba mendigando en la calle. Un hombre se le acercó. &quot;Hola, soy Thomas. Trabajo cerca de acá, en un lugar donde podemos darte comida,&quot; dijo el hombre. Apuntó hacia una casa amarilla con techo azul. &quot;Ojalá vayas pronto a buscar comida&quot; le dijo. Magozwe miró al hombre, y después miró la casa. &quot;Quizá&quot;, dijo, y se fue.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
-<p>Con el paso de los meses, los jóvenes mendigos se acostumbraron a la presencia de Tomás. Él disfrutaba hablar con la gente, especialmente con los mendigos. Tomás escuchaba las historias de sus vidas. Era serio y paciente, nunca maleducado ni irrespetuoso. Algunos de los chicos empezaron a ir a la casa amarilla y azul a buscar comida al mediodía.</p>
+<p>Con el paso de los meses, los jóvenes mendigos se acostumbraron a la presencia de Thomas. Él disfrutaba hablar con la gente, especialmente con los mendigos. Thomas escuchaba las historias de sus vidas. Era serio y paciente, nunca maleducado ni irrespetuoso. Algunos de los chicos empezaron a ir a la casa amarilla y azul a buscar comida al mediodía.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
-<p>Magozwe estaba sentado en la calle mirando su libro cuando Tomás vino y se sentó a su lado. &quot;¿De qué trata la historia?&quot; preguntó Tomás. &quot;Trata sobre un chico que se convierte en piloto,&quot; respondió Magozwe. &quot;¿Cómo se llama el niño?&quot; preguntó Tomás. &quot;No sé porque no sé leer,&quot; dijo Magozwe en voz baja.</p>
+<p>Magozwe estaba sentado en la calle mirando su libro cuando Thomas vino y se sentó a su lado. &quot;¿De qué trata la historia?&quot; preguntó Thomas. &quot;Trata sobre un chico que se convierte en piloto,&quot; respondió Magozwe. &quot;¿Cómo se llama el niño?&quot; preguntó Thomas. &quot;No sé porque no sé leer,&quot; dijo Magozwe en voz baja.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
-<p>Cuando volvieron a reunirse, Magozwe le relató la historia de su vida a Tomás. Le habló de su tío y de por qué huyó de esa casa. Tomás no hablaba mucho, y no le decía a Magozwe qué hacer, pero siempre le escuchaba con atención. Algunas veces conversaban mientras comían en la casa del techo azul.</p>
+<p>Cuando volvieron a reunirse, Magozwe le relató la historia de su vida a Thomas. Le habló de su tío y de por qué huyó de esa casa. Thomas no hablaba mucho, y no le decía a Magozwe qué hacer, pero siempre le escuchaba con atención. Algunas veces conversaban mientras comían en la casa del techo azul.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
-<p>Cuando Magozwe cumplió alrededor de diez años, Tomás le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Tomás leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, &quot;creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?&quot; Tomás le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
+<p>Cuando Magozwe cumplió alrededor de diez años, Thomas le regaló un nuevo libro de cuentos. Era la historia de un niño de una aldea que creció y se convirtió en un famoso jugador de fútbol. Thomas leyó esa historia a Magozwe en muchas ocasiones, hasta que un día le dijo, &quot;creo que ya es tiempo que vayas a la escuela y aprendas a leer. ¿Qué te parece?&quot; Thomas le explicó que conocía un lugar donde los niños podían vivir e ir a la escuela.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
-<p>Magozwe le habló de sus miedos a Tomás. Con el paso del tiempo, Tomás pudo asegurarle al chico que su vida iba a ser mejor en ese nuevo lugar.</p>
+<p>Magozwe le habló de sus miedos a Thomas. Con el paso del tiempo, Thomas pudo asegurarle al chico que su vida iba a ser mejor en ese nuevo lugar.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
-<p>Magozwe estaba sentado en el patio de la casa del techo verde, leyendo un libro de cuentos de su escuela. Tomás se le acercó y se sentó junto a él. &quot;¿De qué trata la historia?&quot; preguntó Tomás. &quot;Trata sobre un chico que se convierte en profesor,&quot; respondió Magozwe. &quot;¿Cómo se llama el chico?&quot; preguntó Tomás. &quot;Su nombre es Magozwe,&quot; dijo Magozwe sonriendo.</p>
+<p>Magozwe estaba sentado en el patio de la casa del techo verde, leyendo un libro de cuentos de su escuela. Thomas se le acercó y se sentó junto a él. &quot;¿De qué trata la historia?&quot; preguntó Thomas. &quot;Trata sobre un chico que se convierte en profesor,&quot; respondió Magozwe. &quot;¿Cómo se llama el chico?&quot; preguntó Thomas. &quot;Su nombre es Magozwe,&quot; dijo Magozwe sonriendo.</p>
 <center>
 <strong>16</strong>
 </center>
