--- a/stories/es/0052_simbegwire_slides.html
+++ b/stories/es/0052_simbegwire_slides.html
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p>Su padre la visitaba todos los días. Con el paso del tiempo, él llevó a Anita. Ella tomó la mando de Simbegwire. &quot;Lo siento mucho pequeñita, me equivoque,&quot; ella le dijo. &quot;¿Me darías otra oportunidad?&quot; Simbegwire volteó a mirar a su padre, quien lucía preocupado. Entonces, ella se acercó a Anita lentamente y la abrazó.</p>
+<p>Su padre la visitaba todos los días. Con el paso del tiempo, él llevó a Anita. Ella tomó la mando de Simbegwire. &quot;Lo siento mucho pequeñita, me equivoqué,&quot; ella le dijo. &quot;¿Me darías otra oportunidad?&quot; Simbegwire volteó a mirar a su padre, quien lucía preocupado. Entonces, ella se acercó a Anita lentamente y la abrazó.</p>
 <center>
 <strong>15</strong>
 </center>
