--- a/stories/es/0156_el-cocodrilo-hambriento.html
+++ b/stories/es/0156_el-cocodrilo-hambriento.html
@@ -49,7 +49,7 @@ Christian G.<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
 
-<p>Había una vez, un cocodrilo que tenía mucha hambre.</p>
+<p>Había una vez un cocodrilo que tenía mucha hambre.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
