--- a/stories/fa/0337_بچه-های-مومی_slides.html
+++ b/stories/fa/0337_بچه-های-مومی_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Nozibele y sus tres cabellos - Global African Storybook</title>
+  <title>بچه های مومی - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="nozibele-y-sus-tres-cabellos" class="slide level1">
-<h1>Nozibele y sus tres cabellos</h1>
+<section id="بچه-های-مومی" class="slide level1">
+<h1 dir="rtl">بچه های مومی</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
-<p>Hace mucho tiempo, tres chicas salieron a buscar leña.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
+<p dir="rtl">روزی روزگاری خانواده ای بودند که شاد زندگی می کردند.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
-<p>Hacía mucho calor, así que fueron a nadar al río. Jugaron, chapotearon, y nadaron en el agua.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
+<p dir="rtl">آنها هیچوقت با هم نجنگیدند. آنها درخانه و زمین های کشاورزی به پدر و مادرشان کمک کردند.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
-<p>Repentinamente, se dieron cuenta que era tarde. Corrieron hacia la villa.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
+<p dir="rtl">ولی آنها اجازه ی نزدیک شدن به آتش را نداشتند.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>Cuando estaban cerca de casa, Nozibele se tocó su cuello y se dio cuenta que se le había quedado su collar. &quot;¡Por favor, acompáñenme a buscarlo!&quot; ella les rogó a sus amigas. Pero sus amigas dijeron que era muy tarde.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
+<p dir="rtl">آنها مجبور بودند که تمام کارهایشان را در طول شب انجام دهند. چون بدنشان از جنس موم بود.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
-<p>Así que Nozibele se devolvió al río sola. Encontró su collar y se apuró para regresar a casa. Pero ella se perdió en la oscuridad.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
+<p dir="rtl">اما یکی از پسرها آرزو داشت که در زیر نور آفتاب بیرون برود</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
-<p>A la distancia veía una luz que venía de una choza. Corrió hacia ella y tocó a la puerta.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
+<p dir="rtl">یک روزدیگر نتوانست طاقت بیاورد. برادرهایش به او هشدار دادند که بیرون نرود</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p>Para su sorpresa, un perro abrió la puerta y le dijo, &quot;¿Qué quieres?&quot; &quot;Estoy perdida y necesito un lugar para dormir,&quot; dijo Nozibele. &quot;¡Pasa si no te morderé!&quot; dijo el perro. Así que Nozibele pasó.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
+<p dir="rtl">اما دیگر خیلی دیر شده بود! او در اثر آفتاب سوزان ذوب شد.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>Luego el perro dijo, &quot;¡Cocina para mí!&quot; &quot;Pero nunca he cocinado para un perro antes,&quot; ella le contestó. &quot;¡Cocina, o te muerdo!&quot; dijo el perro. Así que Nozibele cocinó un poco de comida para el perro.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
+<p dir="rtl">بچه های مومی خیلی ناراحت شدند که دیدند برادرشان در جلوی چشمشان ذوب شد.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>Luego el perro dijo, &quot;¡Haz la cama para mí!&quot; Nozibele respondió, &quot;Nunca he hecho la cama de un perro.&quot; &quot;¡Hazla, o te muerdo!&quot; dijo el perro. Así que Nozibele hizo la cama.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
+<p dir="rtl">ولی بچه ها یک نقشه کشیدند. آنها گلوله ی ذوب شده ی موم را به شکل یک پرنده در آوردند.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>Ella tenía que cocinar, barrer y lavar todos los días para el perro. Hasta que un día el perro le dijo, &quot;Nozibele, hoy tengo que ir a ver a unos amigos. Barre la casa, prepara comida y lava mis cosas antes de que regrese.&quot;</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
+<p dir="rtl">آنها برادرشان را که به شکل پرنده در آمده بود را بالای یک کوه بلند بردند.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>Tan pronto como el perro se había ido, Nozibele se sacó tres cabellos de su cabeza y puso un cabello debajo de la cama, otro detrás de la puerta y uno en el corral. Después corrió a casa tan rápido como pudo.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
+<p dir="rtl">وقتی که آفتاب طلوع کرد برادرشان همین طور که آواز می خواند به دوردست ها پرواز کرد.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,35 +195,17 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>Cuando el perro regresó a casa, comenzó a buscar a Nozibele. &quot;¡Nozibele, ¿dónde estás?!&quot; el gritaba. &quot;Aquí estoy, debajo de la cama,&quot; dijo el primer cabello. &quot;Estoy aquí, detrás de la puerta,&quot; dijo el segundo cabello. &quot;Estoy aquí, en el corral,&quot; dijo el tercero.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
-<p>Entonces el perro se dio cuenta que Nozibele lo había engañado. El perro corrió, corrió y corrió hacia la villa. Pero los hermanos de Nozibele estaban esperándolo con palos grandes. El perro se devolvió corriendo y nunca nadie lo ha visto aparecerse de nuevo.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="nozibele-y-sus-tres-cabellos-1">Nozibele y sus tres cabellos</h2>
-<strong>Texto:</strong> Tessa Welch<br> <strong>Ilustración:</strong> Wiehan de Jager<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
-<p>
+<h2 dir="rtl" id="بچه-های-مومی-1">بچه های مومی</h2>
+<strong>Text:</strong> Southern African Folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
-<p><div class="license">
+<p dir="rtl">
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/children-wax'>here</a>
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
