--- a/stories/index.html
+++ b/stories/index.html
@@ -2471,6 +2471,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/fa/0001_مرد-خیلی-قد-بلند_slides.html" target="_blank">مرد خیلی قد بلند</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="fa0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0007</td>
       <td><a href="/stories/fa/0007_در-جستجوی-آب_slides.html" target="_blank">در جستجوی آب</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2525,6 +2531,12 @@
       <td><a name="fa0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0234</td>
+      <td><a href="/stories/fa/0234_اندیسوا-ستاره-ی-فوتبال_slides.html" target="_blank">اندیسوا ستاره ی فوتبال</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="fa0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/fa/0253_کتاب-عکس-دار_slides.html" target="_blank">کتاب عکس دار</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2541,6 +2553,12 @@
       <td><a href="/stories/fa/0309_کوچک-و-بزرگ_slides.html" target="_blank">کوچک و بزرگ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="fa0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/fa/0337_بچه-های-مومی_slides.html" target="_blank">بچه های مومی</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="fa0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -3591,7 +3609,7 @@
       <td>0001</td>
       <td><a href="http://my.africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -3987,7 +4005,7 @@
       <td>0234</td>
       <td><a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
@@ -4137,7 +4155,7 @@
       <td>0337</td>
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0337">ar</a>, <a href="#es0337">es</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a>, <a href="#zh0337">zh</a></td>
+      <td><a href="#ar0337">ar</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a>, <a href="#zh0337">zh</a></td>
     </tr>
     <tr>
       <td>0341</td>
