--- a/stories/index.html
+++ b/stories/index.html
@@ -1598,6 +1598,12 @@
       <td><a name="gu0320"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0331</td>
+      <td><a href="/stories/gu/0331_વરસાદ_slides.html" target="_blank">વરસાદ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsOThjNWlCV0dpQlk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0331"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0341</td>
       <td><a href="/stories/gu/0341_આનટોનિ-કે-બો-માંગ-બલે_slides.html" target="_blank">આનટોનિ કે બો માંગ બલે</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsOThjNWlCV0dpQlk"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2508,7 +2514,7 @@
     </tr>
     <tr>
       <td>0008</td>
-      <td><a href="/stories/fa/0008_چه-کار-داری-میکنی‌_slides.html" target="_blank">چه کار داری میکنی‌؟</a></td>
+      <td><a href="/stories/fa/0008_چه-کار-داری-میکنی‌؟_slides.html" target="_blank">چه کار داری میکنی‌؟</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsZXJ0R3lPN05lLXc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="fa0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -4353,7 +4359,7 @@
       <td>0331</td>
       <td><a href="http://my.africanstorybook.org/stories/rain">Rain</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#yue0331">yue</a>, <a href="#zh0331">zh</a></td>
+      <td><a href="#gu0331">gu</a>, <a href="#yue0331">yue</a>, <a href="#zh0331">zh</a></td>
     </tr>
     <tr>
       <td>0337</td>
